flightdeet spacing fix

--- a/dj/dj_app/static/flight_deet.css
+++ b/dj/dj_app/static/flight_deet.css
@@ -509,3 +509,6 @@ table.another-table td:first-child {
   width: 100%;
 }
 
+body {
+  margin-bottom: 100px;
+}
